--- a/VRChat/10/997510.html
+++ b/VRChat/10/997510.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "k+UlKXss4TbiQtHI51DWiEdNPmPOBfNnMwXsj4XX628="></script>
+    "zkgB0LaiGIPl0h6OGoYH+F5hibK/5YLRU/qEq+IUw00="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"OculusGoでVRChatをしたお話","description":"＝＝＝＝＝＝＝【注意】＝＝＝＝＝＝＝＝＝＝＝\n・ブログに書いてあるものと内容はほぼ同じです。\n・やろうとしてできなかった人向けです。\n・非常に薄い内容。\n・マッハ新書？　技術書？\n・初出品\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n【内容】\nOculusGoでVRChatをしたい人向けのモノです。\n自身の失敗と解決法が書いてます。\n\n550文字前後\n","url":"https://booth.pm/ja/items/997510","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d23f9e65-f92e-4097-a89c-7e4c1b80cd5b/i/997510/4e0d4c06-0866-45fc-a0e0-4a62378a9455_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="k+UlKXss4TbiQtHI51DWiEdNPmPOBfNnMwXsj4XX628="></script>
+    nonce="zkgB0LaiGIPl0h6OGoYH+F5hibK/5YLRU/qEq+IUw00="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -354,9 +354,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
