--- a/VRChat/63/997163.html
+++ b/VRChat/63/997163.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "LBEv3OcwDcal4ZAYm014ozee9kzDCOTBcRjfJvHnlck="></script>
+    "c74L023fheFd6L11emFMMHe/IYgWULtcHJmk0xFpawg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】反省首掛け","description":"前日にお酒に酔ってやらかしてしまった、申し訳ないことをしてしまったななどの時におすすめです。（実際私も使いました。）\n文字の変更はペイントツールなどでPSDファイルを開くことで可能です。\n\nVRChatアバターへの装飾を想定して作られております。\n\n収益化された動画への出演、映り込みなどOKです。\n\n色の変更は可能です。ご自分のお好きな色にカスタムしてください。\nテクスチャはPSDファイルで保存されております。\nレイヤーが分けられているので、色変更はやりやすいと思います。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n内容物：反省首掛け.fbx\n　　　　反省首掛け.psd\n\nモデルポリゴン数：38△\n\nマテリアル：1つ\n\n禁止事項：再配布、転売、自作発言","url":"https://booth.pm/ja/items/997163","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/997163/ae8df437-9822-456e-a5b0-daab363b7bb7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LBEv3OcwDcal4ZAYm014ozee9kzDCOTBcRjfJvHnlck="></script>
+    nonce="c74L023fheFd6L11emFMMHe/IYgWULtcHJmk0xFpawg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -493,9 +493,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
