--- a/VRChat/27/996827.html
+++ b/VRChat/27/996827.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "t5t1aJGvCfCBG236H5gPoTJgLzuuyAsnqI057ApmyDk="></script>
+    "a40LZgWWbnzNJMk2rvo+CRH5TaPmCMdaPJsnoSe3jHc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Position Shader","description":"VRChatでの利用を想定した、現在位置(※)をメートル単位で表示す\nるシェーダーです。\n商品にはシェーダー、マテリアル、テクスチャ、マテリアルをセットしたQuadのプレハブが含まれます。\n\n※マテリアルがセットされたメッシュのローカル原点座標をワールド座標に変換して表示します。\n視覚的に見えるメッシュより原点がかけ離れた位置にあると、見た目の場所よりずれた座標が表示されます。\nまたuvが0～1ではない、限定的な範囲のメッシュの場合は、座標がキレイに表示されない場合があります。\n基本的にはQuadやPlaneで利用してください。\n\n開発中動画\nhttps://twitter.com/onotchi_/status/1034930068059906049\n\n背景テクスチャ、数値テクスチャは変更可能です。\n全体の透過度、表示数字桁数も変更可能です。\n数字の桁数は3-5桁で、原点から100kmの範囲内のワールドであれば問題なく表示できると思います。\nただし元々のワールドの位置が原点から100km以上離れた場所に作られていたりした場合は、表示しきれません。\nシェーダーを書き換えれば桁数上限は増やせるため、必要に応じて改造してください。\n\nパラメータ\n・Texture：背景用テクスチャ\n・Digit Texture：数値テクスチャ\n・Alpha：全体透過度\n・Digit Length：数値桁数\n・Font Width：数値1文字の幅(ドット数)\n・Offset：数字テクスチャのオフセット\n\n差し替え用の数字テクスチャを作る場合は、等幅フォントで作成してください。\nまた文字の順は必ず「0123456789 -」としてください。\n9と-の間のスペースは正の値の符号用なので、スペースではなく+でもOKです。\n\n腕時計のように腕部分に仕込んで常に確認できるようにするもよし、アニメーションオーバーライドで必要に応じて目の前に表示されるようにしてもよし、自由な用途でお使いください。\n\n※性質上、複数のオブジェクトに同一マテリアルを設定することが出来ません。複数オブジェクトを使う場合は、それぞれ別のマテリアルを設定してください。\n\n\nシェーダーやテクスチャは自由に改造して構いませんが、データの再配布、販売は不可とします。\nまた利用は自己責任とし、トラブルが発生した場合でも一切の責任は負いかねますので、予めご了承ください。\n\nシェーダーを伴わない、差し替え用のテクスチャ、マテリアルの配布は問題ありません。\n","url":"https://booth.pm/ja/items/996827","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/a5ee2955-f931-4ee1-9f8c-8ffe0ada05e8/i/996827/1db6b963-bcc9-4d02-9623-f82ac254acd3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="t5t1aJGvCfCBG236H5gPoTJgLzuuyAsnqI057ApmyDk="></script>
+    nonce="a40LZgWWbnzNJMk2rvo+CRH5TaPmCMdaPJsnoSe3jHc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -395,9 +395,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
