--- a/VRChat/26/996626.html
+++ b/VRChat/26/996626.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8f1ola1k6Z6r+b3+exXqFjjFgNZSc3cieQUKuITs0ZM="></script>
+    "BQhPOWeCTHskQJHKj/rR4olpk/xBw53HQYOUgm5KkgM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"安全ヘルメット","description":"この商品はVRChatでの使用が想定されたFBX形式のモデルです。\n\n同梱してあるファイル内で自由に改造していただくことが可能です。","url":"https://booth.pm/ja/items/996626","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/49fd9aa9-40f7-4021-91dd-0b60603082ac/i/996626/f7deb209-1dd3-4afb-9373-b79d64dbff04_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8f1ola1k6Z6r+b3+exXqFjjFgNZSc3cieQUKuITs0ZM="></script>
+    nonce="BQhPOWeCTHskQJHKj/rR4olpk/xBw53HQYOUgm5KkgM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -167,7 +167,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      234
+                                      235
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -183,7 +183,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      234
+                                      235
                                     </div>
                                   </div></a>
                                 </div>
@@ -406,9 +406,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
