--- a/VRChat/08/996508.html
+++ b/VRChat/08/996508.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "E9qedpxhz3IVjOj41+RoTi+UKaZNp/rb2sx3FabvNBc="></script>
+    "DMlFP5o6pBXxJJL2QDwPB4RLYdk65CJepxP3NBjAJ2o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けモデル【つよいインコ Ver1.1】","description":"VRChat向け3Dモデル【つよいインコ】です。\nポリゴン数は19030です。\nVRchatでの使用を想定して販売していますが、ゲームや配信、商用利用等にも使えます。\n二次配布は改変したものも含め禁止です。（VRCのアバターペデスタル含む）\n\n内容\n・unitypackage(モデルデータ（FBXとPNG）とprefabデータ)\n・モデルデータ（FBX）\n・テクスチャ（旧Verと新Ver）(PNG)\n\n連絡先\n@jimtugy（Twitter）\n\n【更新内容】\n2018/9/13 ノーマルマップが追加され、筋肉量が増加しました。\n\n\nIt is a 3D model for VRChat [Strong Parakeet].\nThe number of polygons is 19030.\nAlthough it sells it assuming use with VRchat, it can also be used for games, distribution, commercial use etc.\nSecondary distribution is prohibited, including those modified. (Including avatar pedestal of VRC)\n\nContents\n· Unitypackage (model data (FBX and PNG) and prefab data)\n· Model data (FBX)\n· Texture (old Ver and new Ver) (PNG)\n\ncontact information\n@ jimtugy (Twitter)\n\n【Update contents】\n2018/9/13 Normal map was added, muscle mass increased.","url":"https://booth.pm/ja/items/996508","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/472e2c7e-f67e-4208-a492-0fe806b258e0/i/996508/11e6de9f-7b9d-44ba-b220-096cc1174dba_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="E9qedpxhz3IVjOj41+RoTi+UKaZNp/rb2sx3FabvNBc="></script>
+    nonce="DMlFP5o6pBXxJJL2QDwPB4RLYdk65CJepxP3NBjAJ2o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -434,9 +434,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
