--- a/VRChat/51/995951.html
+++ b/VRChat/51/995951.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "bFK8YEevjJ4pAlLR7QTUPsMk7UixykKG5lgIT4L97Qs="></script>
+    "sNNlTgOmT6m0OdM8YTpPUtK7TFJro2KIFtMCEuZGDsM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SuperRealLoveDistModeCheckシェーダー","description":"主にVRChatで超ガチ恋距離モードが適用されているワールドか判定するために作りました。\n超ガチ恋距離モードが適用されているとこのシェーダーを割り振ったオブジェクトが表示されます。\n各ワールドの調査やかわいい動きをするときの目安になるかもしれないです。\n\n使用例↓\nhttps://twitter.com/gatosyocora/status/1034047282281238529\n(商品紹介の画像や使用例に写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)は同封しておりません)\n\n設定可能なパラメータは以下の通りです。\n・Texture : 表示されるテクスチャ\n・Editing : 編集中に位置調整するために使います\n\nCC0ライセンスですので商用利用・改変・再配布など可能です。\n\nBoost用もありますが、内容物は変わりません。","url":"https://booth.pm/ja/items/995951","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/995951/7f3116d9-c81b-4ee3-bd12-c6ea231846ec_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bFK8YEevjJ4pAlLR7QTUPsMk7UixykKG5lgIT4L97Qs="></script>
+    nonce="sNNlTgOmT6m0OdM8YTpPUtK7TFJro2KIFtMCEuZGDsM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -365,9 +365,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
