--- a/VRChat/91/995891.html
+++ b/VRChat/91/995891.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "6TH2DFCaZkiUJfgvke8BMk+Z5uEuvqPQl3GdzCwimDc="></script>
+    "SGvY5MFRlBB0HGp4gUjR5hzUSL7ch0QsIWmdMEt2Xc0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRアバター「くろこねこ」","description":"こちらのモデルは最新版のVRChatのバージョンに対応して作成、動作確認されていない可能性があります。下記のモデルのアップデート情報をご確認の上、自己責任でご購入お願いします。尚、現在こちらのモデルのアップデート予定はございません。\n\n本モデルはUnityのHumanoid形式に対応した オリジナルモデル『くろこねこ』です。 \n小さな体でちまちま動き回る姿がまるで子猫の様に可愛く、ときに不器用で、ときに無愛想な一面もあります。（総じてかわいい）\n\n主にVRChatでの使用を想定しています。\n\nVRChat 用のリップシンク１５種と表情モーフ６種類が用意されています。\n\n\nVR、フルトラッキングでの動作確認済みです！\n\n※UnityにインポートするときVRSDKをあらかじめインポートしておいてください。\n\n\n＊内容物\nkurokoneko_v002\n-UniyPackageです。\n\nKurokoneko.fbx\n-3Dモデルのfbxデータとなります。\n\nTexture.png\n-テクスチャとなります。\n\nTexture_kaihen.psd\n-改変がしやすいようにレイヤー分けしたpsdデータとなります。(UVグリッド含む)\n\n＊VRChatに「くろこねこ」を連れて行くまでの流れ＊.PDF\n-アバターアップロードまでの手順です。\n\n---------------------------------------------------\nHappyHalloween_ver\n\n・kurokoneko_halloween!\n-Unitypackageです。prefab化されたものが入っているので、VRChatにすぐにアップロードできます。\n・Happy_Halloween\n-これはfbxのモデルデータです。\n・Halloween\n-テクスチャpngです。\n・Halloween_kaihen.psd\n-改変用のpsdデータになります。\n・Candy_halloween\n-キャンディーのfbxモデルデータです。\n・Candy\n-キャンディーのテクスチャpngです。\n\n\n＊利用規約\n -本モデルを購入した時点で本利用規約に同意したものとします。利用規約の内容は変更する場合があり、最新のものが適用されます。\n \n-本データはVRChatでの利用を想定しております。VRChat以外での利用は禁止しませんが、本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\nアップロード者本人のみが使える場合に限り、VRChatへのアップロードに関しては再配布にあたらないものとします。VRChatのペデスタルへの使用は禁止です。\n\n-再配布、自作発言、名誉棄損・法律に反する使用はご遠慮ください。\n『くろこねこ』とそれに関連したデータの改造および個人的利用範囲での流用は自由ですが、この配布データ『くろこねこ』及び改変したデータが持つ著作権は大元の製作者である（姉と妹）に帰属するものとします。モデルデータ・テクスチャーデータの再配付・販売は改変の有無を問わず禁止します。 また、特定個人や団体への中傷を目的とした利用を禁止します。\n\n制定日　2018/8/31\n\n＊アップデート情報\n2018/08/31\nUnityパッケージ内のVRCSDKの消して、再アップロードしました。新しいバージョンはkurokoneko_v02になります。\n\n2018/09/19\nkurokoneko_003を追加しました。こちらは、Prefab化したものなので、簡単にVRChat内にアプロードすることができます。\n\n\n2018/09/30\nくろこねこHalloween.verのデータを公開しました。\n\n2018/10/03\nHappyHalloween_v02が最新バージョンになります。\nテクスチャの改変用データに、リボンのレイヤーが抜けていたので、追加しました。\n\n\n2018/10/06\nHappyHalloween_v02にアップロードするまでの説明書「くろこねこHalloween.verを連れていくまでの流れ」を追加しました。\n\n\n2018/10/16\nkurokoneko_v03,HappyHalloween_v03が最新のデータとなります。\n・自動耳ピョコが追加されました。","url":"https://booth.pm/ja/items/995891","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1800"},"image":"https://booth.pximg.net/c/620x620/ef40f496-b7db-4dc9-9e06-1127a645a568/i/995891/77aabd84-f065-42f6-b52f-3a447c1288e5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6TH2DFCaZkiUJfgvke8BMk+Z5uEuvqPQl3GdzCwimDc="></script>
+    nonce="SGvY5MFRlBB0HGp4gUjR5hzUSL7ch0QsIWmdMEt2Xc0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -459,9 +459,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
