--- a/VRChat/29/995529.html
+++ b/VRChat/29/995529.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "yua/g6WxU4K5wk7bWS2FGFiG6uQ1/SUlC+wXj/Jtbfo="></script>
+    "Z6LhOzFnxI3o8oy/dDYwZsEL9PJx80wEGGUjBiQTB+4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"竹流式お菓子セット","description":"　★　竹流式お菓子セット　★\n\n本モデルは主に以下の用途での使用を想定しております。\n\n　・VRアバター利用\n　・Unityゲーム作成\n　・動画、映像作成\n　・静止画作成\n　・Vtuber活動\n\nモデルやテクスチャの改変は自由に行っていただいて構いません。\n\n営利・非営利問わずご利用いただけますが、営利目的・商用利用の場合は改変の有無にかかわらずクレジット記載（竹流式お菓子セット@airgreennet）が必要です。\n※ご自身に金銭などの報酬が得られる場合はクレジット必要\n\nVRchat内で撮影された動画、スクリーンショットの映り込みに関してはクレジット不要です。\n他者の行っている凸待ち配信などへの参加はクレジット不要です。\n\n\n　●　同梱物一覧　●\n\n・FBXファイル10個\n　　ビスケット\n　　キャンディ\n　　お花クッキー\n　　星クッキー\n　　スマイルクッキー\n　　マカロンクリーム色\n　　マカロン緑色\n　　マカロン水色\n　　マカロンピンク\n　　上記9種全部入りFBX\n・テクスチャ3枚\n・改変用psdファイル3個\n\n\n　■　免責事項　■\n\n・この製品を利用して発生したトラブルに関しては、一切の責任を負いません。\n\n　■　禁止事項　■\n\n・改変の有無に関わらず、本モデルデータを再配布する行為\n（再配布とは本製品のモデルデータを直接利用可能な状態で第三者に配布する行為を指します。\n　なお、VRchat上でのアバターペデスタルでの利用に関しては許可します。）\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用\n\n\n2018/8/30　リリース\n\n\n竹流\n空創緑林館　http://airgreen.net/\nTwitter　https://twitter.com/airgreennet\npixiv　https://www.pixiv.net/member.php?id=39794","url":"https://booth.pm/ja/items/995529","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/7dbcb1ac-257b-4189-ab1a-4aa38dcc29f7/i/995529/24cb1258-e9c6-43e9-8c9d-682e0feec224_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yua/g6WxU4K5wk7bWS2FGFiG6uQ1/SUlC+wXj/Jtbfo="></script>
+    nonce="Z6LhOzFnxI3o8oy/dDYwZsEL9PJx80wEGGUjBiQTB+4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -421,9 +421,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
