--- a/VRChat/28/993328.html
+++ b/VRChat/28/993328.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "r3jhhCNoYM5BIUmChnvZmtPJ6iqTAdLqDKUjaStSc3o="></script>
+    "VXumPUI8Hyapp2SLturMirvMaoUrROUBVN9HNFs9p80="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"PlayAreaOutsideシェーダー","description":"特定の角度から撮影したときにテクスチャが表示されるシェーダーです。\nVRChatでアバターのスカートの中の覗き防止として使うために制作しました。\n他の用途としても利用可能です。\n\nジョークグッズ寄りです。たまに隠し切れないときがあります\n\n","url":"https://booth.pm/ja/items/993328","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/993328/ac952d38-9089-4422-8130-a13e78c84825_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="r3jhhCNoYM5BIUmChnvZmtPJ6iqTAdLqDKUjaStSc3o="></script>
+    nonce="VXumPUI8Hyapp2SLturMirvMaoUrROUBVN9HNFs9p80="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -439,9 +439,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
