--- a/VRChat/50/993550.html
+++ b/VRChat/50/993550.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1uAf8V+z7HyrEtHHTjh4e0gB60DQ8t/cailQt5H6dnw="></script>
+    "Eyo0t0LOCEii7x0uD8KTPECYh8sEf/vWjizkBzlhubw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[BP]スケートボード","description":"[BP]スケートボード　ver1.0\n\n●商品説明\nグラフィティペイント済みスケートボードとなります。\nペイントあり・なしの２種類を用意しております。\n\n●内容物\nReadme.txt　　　　　　　　　（はじめにお読みください）\nSkateboard.fbx　　　　　　　 (本体)\nSkateboard_○○_Albedo.png　（Albedoマップ）\nSkateboard_○○_Metallic.png（Metallicマップ）\nSkateboard_○○_Normal.png　（Normalマップ）\nSkateboard.unitypackage\n\nポリゴン数:3274\n\n●利用規約\n改変・商用利用は可となります。\n＊取り出せる形での配布は禁止となります。\n\n【免責事項】\nこの製品を利用して発生したトラブルに関しては、一切の責任を負いません。\n\n何かご質問がありましたらTwitter:@buchipanda_VRまでご連絡をお願いします。","url":"https://booth.pm/ja/items/993550","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/aabbb614-482e-4b6d-8e57-4b27696be81e/i/993550/1742fba3-7e3f-44b5-83ea-6f54b313a4c1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1uAf8V+z7HyrEtHHTjh4e0gB60DQ8t/cailQt5H6dnw="></script>
+    nonce="Eyo0t0LOCEii7x0uD8KTPECYh8sEf/vWjizkBzlhubw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -414,9 +414,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
